--- a/yes.html
+++ b/yes.html
@@ -63,7 +63,7 @@
 
     <!-- Background Music -->
     <audio id="bgMusic" loop>
-        <source src="lana.mp4" type="audio/mpeg">
+        <source src="final.mp4" type="audio/mpeg">
     </audio>
 
     <!-- Fireworks Sound -->
