--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </div>
     </div>
 
-    <audio id="yesSound" src="main.mp4"></audio>
+    <audio id="yesSound" src="sound10.mp4"></audio>
 
     <!-- Background Music -->
     <audio id="bgMusic" loop autoplay>s
