--- a/yes.html
+++ b/yes.html
@@ -52,6 +52,13 @@
             width: 100%;
             height: 100%;
             z-index: -1; /* Behind the text */
+            display: none; /* Initially hidden */
+        }
+
+        #instruction {
+            font-size: 14px;
+            margin-top: 20px;
+            opacity: 0.7;
         }
     </style>
 </head>
@@ -71,54 +78,83 @@
         <source src="fireworks.mp4" type="audio/mpeg"> <!-- Replace with your fireworks sound file -->
     </audio>
 
-    <div class="box">
-        <h1>✨ Welcome ✨</h1>
+    <!-- Typing Sound -->
+    <audio id="typingSound">
+        <source src="typing.mp3" type="audio/mpeg"> <!-- Replace with your typing sound file (e.g., a short keypress sound) -->
+    </audio>
 
-        <!-- Expanded congratulatory message (will be typed out) -->
+    <div class="box">
+        <h1>✨ Hi Clyde!✨</h1>
+
+        <!-- Expanded congratulatory message (will be typed out after click) -->
         <p id="congratsMessage"></p>
 
-        <p style="font-size:14px; margin-top:20px; opacity:0.7;">
-            (Tap anywhere to play music 🎵)
+        <p id="instruction" style="font-size:14px; margin-top:20px; opacity:0.7;">
+            (Tap anywhere to start the celebration 🎵)
         </p>
     </div>
 
     <script>
-        // Play music after user interaction
-        const music = document.getElementById("bgMusic");
-        const fireworksSound = document.getElementById("fireworksSound");
-
-        document.body.addEventListener("click", () => {
-            music.volume = 0.4;
-            music.play();
-            fireworksSound.volume = 0.3; // Softer than main music
-            fireworksSound.play();
-        }, { once: true });
-
-        // Typewriter effect for congratulatory message
-        const congratsText = "Congratulations on surviving this year! Amidst the unsaid words, hidden sorrows, and challenges that tested your spirit, you've emerged stronger, wiser, and more resilient. You've turned pain into power and uncertainty into opportunity. As we step into 2026, remember that every sunrise brings new possibilities—embrace them with courage, chase your dreams fearlessly, and let your light shine brightly. Good luck on this incredible journey ahead; may it be filled with joy, love, and endless growth! 🌟";
+        // Variables for typing and fireworks
+        const congratsText = "Guess what HAHAHAHAHAH? Dik ammo ibagak  and lol this might sound a little cringe. I don’t know exactly what this year was like for you, but I still wanted to CONGRATULATE YOU for getting through it. Just SURVIVING a year already says a lot. Wishing you a really good 2026 and more GOOD DAYS, SMALL WINS, and LIGHTER MOMENTS. I also think it’d be nice to get to know youuuu lol … I have a feeling you’re someone worth knowing.🌟";
         let charIndex = 0;
         const congratsElement = document.getElementById("congratsMessage");
-
-        function typeCongrats() {
-            if (charIndex < congratsText.length) {
-                congratsElement.innerHTML += congratsText.charAt(charIndex);
-                charIndex++;
-                setTimeout(typeCongrats, 100); // Slower typing for emphasis
-            }
-        }
-
-        // Start typing after a short delay
-        setTimeout(typeCongrats, 2000);
-
-        // Fireworks display with silver/gold colors and slow-mo
         const canvas = document.getElementById("fireworksCanvas");
         const ctx = canvas.getContext("2d");
         canvas.width = window.innerWidth;
         canvas.height = window.innerHeight;
-
         const particles = [];
         const fireworks = [];
+        const music = document.getElementById("bgMusic");
+        const fireworksSound = document.getElementById("fireworksSound");
+        const typingSound = document.getElementById("typingSound");
+        const instruction = document.getElementById("instruction");
 
+        let started = false; // Flag to ensure it only starts once
+
+        // Function to start everything on click
+        function startCelebration() {
+            if (started) return; // Prevent multiple starts
+            started = true;
+
+            // Hide instruction
+            instruction.style.display = "none";
+
+            // Play music and sounds
+            music.volume = 0.4;
+            music.play();
+            fireworksSound.volume = 0.3;
+            fireworksSound.play();
+
+            // Show canvas and start fireworks
+            canvas.style.display = "block";
+            setTimeout(() => {
+                setInterval(() => {
+                    fireworks.push(new Firework());
+                }, 1200); // Slower launches for slow-mo effect
+                animate();
+            }, 1000);
+
+            // Start typing message
+            setTimeout(typeCongrats, 2000);
+        }
+
+        // Add click listener to body
+        document.body.addEventListener("click", startCelebration, { once: true });
+
+        // Typewriter effect for congratulatory message with sound
+        function typeCongrats() {
+            if (charIndex < congratsText.length) {
+                congratsElement.innerHTML += congratsText.charAt(charIndex);
+                charIndex++;
+                // Play typing sound
+                typingSound.currentTime = 0; // Restart sound if overlapping
+                typingSound.play().catch(() => {}); // Ignore errors if sound fails
+                setTimeout(typeCongrats, 100); // Slower typing for emphasis
+            }
+        }
+
+        // Fireworks classes and functions (unchanged)
         class Particle {
             constructor(x, y, color, velocityX, velocityY, size, isText = false, text = '') {
                 this.x = x;
@@ -267,14 +303,6 @@
             canvas.width = window.innerWidth;
             canvas.height = window.innerHeight;
         });
-
-        // Start fireworks after page load
-        setTimeout(() => {
-            setInterval(() => {
-                fireworks.push(new Firework());
-            }, 1200); // Slower launches for slow-mo effect
-            animate();
-        }, 1000);
     </script>
 
 </body>
